# mpl-image-labeller

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini
.binder/: environment.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml  test.yml
docs/: conf.py  contributing.md  index.md
docs/_static/: custom.css
docs/api/: mpl_image_labeller.rst
docs/examples/: callbacks.ipynb  lazy-loading.ipynb  multi-class.ipynb  single-class.ipynb
examples/: basic_labeller.py  callbacks.py  create_example.py  lazy_loading.py  multiclass_labeller.py
mpl_image_labeller/: __init__.py  _labeller.py  _util.py  _widgets.py
tests/: test_mpl_image_labeller.py
