
[metadata]
name = mpl-image-labeller
url = https://github.com/ianhi/mpl-image-labeller
author = Ian Hunt-Isaak
author_email = ianhuntisaak@gmail.com


description = Use interactive matplotlib to label images for classification
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD license
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source Code =https://github.com/ianhi/mpl-image-labeller

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    matplotlib

[options.extras_require]
testing =
    tox
    tox-conda
    pytest
    pytest-cov
dev =
    ipython
    jedi<0.18.0
    black
    flake8
    flake8-docstrings
    isort
    mypy
    pre-commit
    pydocstyle
    pytest


[bdist_wheel]
universal = 1



[flake8]
exclude = docs, _version.py, .eggs, example
max-line-length = 88
docstring-convention = "numpy"
# ignore =  D100, D213, D401, D413, D107, W503