[metadata]
name = mpl_image_labeller
description = Use interactive matplotlib to label images for classification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mpl-image-labeller.rtfd.io
author = Ian Hunt-Isaak
author_email = ianhuntisaak@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Matplotlib
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Tracker = https://github.com/ianhi/mpl-image-labeller/issues
    Changelog = https://github.com/ianhi/mpl-image-labeller/releases
    Documentation = https://mpl-image-labeller.rtfd.io
    Source = https://github.com/ianhi/mpl-interactions

[options]
packages = find:
install_requires =
    matplotlib
python_requires = >=3.7
zip_safe = False

[options.extras_require]
dev =
    black
    flake8
    flake8-docstrings
    ipython
    isort
    jedi<0.18.0
    mypy
    pre-commit
    pydocstyle
    pytest
doc =
    Sphinx>=1.5
    jupyter-sphinx
    myst-nb
    numpydoc
    sphinx-book-theme
    sphinx-copybutton
    sphinx-panels
    sphinx-thebe
    sphinx-togglebutton
testing =
    pytest

[bdist_wheel]
universal = 1

[flake8]
exclude = docs, _version.py, .eggs, example
max-line-length = 88
docstring-convention = "numpy"
